
title Diagrama de Classes - Gestão de Finanças Pessoais
@startuml

class Utilizador {
  - id : int
  - nome : string
  - email : string
  - password : string
  - perfil : string
  --
  + registar() : void
  + login() : bool
  + editarPerfil() : void
}

class Transacao {
  - id : int
  - descricao : string
  - valor : float
  - data : date
  - categoria : string
  --
  + validarValor() : bool
  + guardarTransacao() : void
}

class Categoria {
  - nome : string
  --
  + criarCategoria() : void
}


class Persistencia {
  --
  + guardarDados() : void
}


Utilizador "1" --> "*" Transacao : cria
Transacao "*" --> "1" Categoria : pertence
Utilizador --> Persistencia : grava/carrega
Transacao --> Persistencia : grava/carrega
@enduml
